enhancement: field_* endpoints account for changes to CEDAR and CEDAR_ENTITY data.
