# hs-ontology-api-spec.yaml
@@ -735,24 +735,33 @@ paths:
   /field-entities:
     get:
       operationId: field_entities_get
-      summary: Return associations between ingest metadata fields and provenance entities. Replacement for field-entities.yaml. NOTE - available only for fields from field-entities.yaml.
+      summary: Return associations between ingest metadata fields and provenance entities. Replacement for field-entities.yaml.
       parameters:
         - name: source
           in: query
           required: false
-          description: case-insensitive name of the ontology source for the provenance entities (HMFIELD = field-types.yaml; HUBMAP = UBKG)
+          description: case-insensitive name of the ontology source for the provenance entity mappings. (HMFIELD = from legacy field-entities.yaml)
           schema:
             type: string
             enum:
               - HMFIELD
-              - HUBMAP
+              - CEDAR
         - name: entity
           in: query
           required: false
-          description: case-sensitive name for entity in either HMFIELD or HUMBMAP ontology
+          description: case-sensitive name for an entity in either HMFIELD or HUBMAP/SENNET
           schema:
             type: string
             example: Sample
+        - name: application
+          in: query
+          required: false
+          description: case-insensitive name of the application context
+          schema:
+            type: string
+            enum:
+              - HUBMAP
+              - SENNET
       responses:
         '200':
           description: Associations between ingest metadata fields and provenance entities.
@@ -761,7 +770,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/FieldEntitiesResponse'
         '400':
-          description:  Invalid value for parameter (e.g., *source* not HMFIELD or HUBMAP); invalid parameter
+          description:  Invalid value for parameter (e.g., *source* not HMFIELD or CEDAR); invalid parameter
         '404':
           description: No field entities (with list of parameters, if specified)
         '5XX':
@@ -769,7 +778,7 @@ paths:
   /field-entities/{name}:
     get:
       operationId: field_entities_name_get
-      summary: Return associations between specified ingest metadata field and provenance entities. Replacement for field-entities.yaml. NOTE - available only for fields from field-entities.yaml.
+      summary: Return associations between specified ingest metadata field and provenance entities. Replacement for field-entities.yaml.
       parameters:
         - name: name
           in: path
@@ -781,7 +790,7 @@ paths:
         - name: source
           in: query
           required: false
-          description: case-insensitive name of the ontology source for the provenance entities (HMFIELD = field-types.yaml; HUBMAP = UBKG)
+          description: case-insensitive name of the ontology source for the provenance entity mappings. (HMFIELD = from legacy field-entities.yaml)
           schema:
             type: string
             enum:
@@ -790,10 +799,19 @@ paths:
         - name: entity
           in: query
           required: false
-          description: case-sensitive name for entity in either HMFIELD or HUMBMAP ontology
+          description: case-sensitive name for entity in either HMFIELD or HUBMAP/SENNET
           schema:
             type: string
             example: Sample
+        - name: application
+          in: query
+          required: false
+          description: case-insensitive name of the application context
+          schema:
+            type: string
+            enum:
+              - HUBMAP
+              - SENNET
       responses:
         '200':
           description: Associations between specified ingest metadata field and provenance entities.
